# open-motion-console-bl

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32H743XX_FLASH.ld  lizard_whitelist.csv  openmotion-bl.ioc  platform.json  sbom.cdx.json  version.h.in
.github/workflows/: build-firmware.yml  safety-security-scan.yml
Core/Inc/: app_hw.h  led_driver.h  main.h  memory_map.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  util.h
Core/Src/: led_driver.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  util.c
Linker/: mapping_fwimg.ld  mapping_sbsfu.ld
Middlewares/ST/STM32_Key_Management_Services/Interface/CryptoApi/HAL/: ca_aes_hal.c
Middlewares/ST/STM32_USB_Device_Library/Class/DFU/Src/: usbd_dfu.c
SBSFU/App/Inc/: app_sfu.h  mapping_export.h  sfu_mpu_isolation.h
SBSFU/App/Src/: sfu_boot.c  sfu_fwimg_common.c  sfu_mpu_isolation.c  sfu_se_mpu.s  sfu_secorebin_Inc.s.in
SECoreBin/: CMakeLists.txt
SECoreBin/Scripts/: SECBOOT_AES128_GCM_AES128_GCM_AES128_GCM.sh  SECBOOT_ECCDSA_WITHOUT_ENCRYPT_SHA256.sh  SECBOOT_ECCDSA_WITH_AES128_CBC_SHA256.sh  STM32H753ZITx.ld  prebuild.sh
USB_DEVICE/App/: usb_device.c  usbd_desc.c  usbd_dfu_if.c  usbd_dfu_if.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: CYBERSECURITY_510k.md
py-tools/: README.md  flash_firmware.py  gen_se_key_s.py  generate_keys.py  requirements.txt  sign_firmware.py  stm32dfu.py
py-tools/keys/: .gitignore  ecdsa_public.pem
